# BebanCapsa

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/bebancapsa/: main.py
